div/drag/resources/drag-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drag
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    name: drag
